example/secondfile/objects/Workflow__c.object
<CustomObject>
    <description>Collab</description>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evaluation_Criteria__c</fullName>
        <label>Evaluation Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Criteria__c</fullName>
        <label>Rule Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Setup_URL__c</fullName>
        <label>Setup URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Workflow_Rule_Name__c</fullName>
        <label>Workflow Rule Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Workflow</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Workflow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>